update promption
